--- a/config.yml
+++ b/config.yml
@@ -45,10 +45,10 @@ params:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
     favicon: "/images/profile.jpg"
-    favicon16x16: "/images/profile.jpg"
-    favicon32x32: "/images/profile.jpg"
-    apple_touch_icon: "/images/profile.jpg"
-    safari_pinned_tab: "/images/profile.jpg"
+    favicon16x16: "https://aviralgarg.com/images/profile.jpg"
+    favicon32x32: "https://aviralgarg.com/images/profile.jpg"
+    apple_touch_icon: "https://aviralgarg.com/images/profile.jpg"
+    safari_pinned_tab: "https://aviralgarg.com/images/profile.jpg"
 
   label:
     text: "Home"
