--- a/config.yml
+++ b/config.yml
@@ -1,28 +1,46 @@
-baseURL: "https://aviralgarg.com"
+baseURL: "https://aviralgarg.com/"
 title: Aviral Garg
 paginate: 5
 theme: PaperMod
+
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
+
+googleAnalytics: UA-123-45
+
+minify:
+  disableXML: true
+  minifyOutput: true
+
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: Aviral Garg
   description: "Aviral Garg's website"
+  keywords: ["Aviral Garg", "Aviral", "Garg", "Software Engineer"]
   author: Aviral Garg
-
-  defaultTheme: auto
+  # author: ["Me", "You"] # multiple authors
+  images: ["images/profile.jpg"]
+  DateFormat: "January 2, 2006"
+  defaultTheme: dark # auto, light
   disableThemeToggle: false
-  ShowShareButtons: true
+
   ShowReadingTime: true
-  disableSpecial1stPost: true
-  displayFullLangName: true
+  ShowShareButtons: true
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
-  ShowCodeCopyButtons: true
+  ShowCodeCopyButtons: false
+  ShowWordCount: true
   ShowRssButtonInSectionTermList: true
-  ShowAllPagesInArchive: true
-  ShowPageNums: true
-  ShowToc: true
+  UseHugoToc: true
+  disableSpecial1stPost: false
+  disableScrollToTop: false
   comments: false
-  images: ["images/profile.jpg"]
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
 
   assets:
     # disableHLJS: true # to disable highlight.js
@@ -33,6 +51,12 @@ params:
     apple_touch_icon: "https://github.com/gaviral/avi/blob/main/assets/images/profile.jpg?raw=true"
     safari_pinned_tab: "https://github.com/gaviral/avi/blob/main/assets/images/profile.jpg?raw=true"
 
+  label:
+    text: "Home"
+    icon: /images/profile.jpg
+    iconHeight: 35
+
+  # profile-mode
   profileMode:
     enabled: true # needs to be explicitly set
     title: Aviral Garg
@@ -46,3 +70,69 @@ params:
         url: posts
       - name: Tags
         url: tags
+
+  # home-info mode
+#  homeInfoParams:
+#    Title: "Hi there \U0001F44B"
+#    Content: Welcome to my blog
+
+#  socialIcons:
+#    - name: twitter
+#      url: "https://twitter.com/"
+#    - name: stackoverflow
+#      url: "https://stackoverflow.com"
+#    - name: github
+#      url: "https://github.com/"
+
+#  analytics:
+#    google:
+#      SiteVerificationTag: "XYZabc"
+#    bing:
+#      SiteVerificationTag: "XYZabc"
+#    yandex:
+#      SiteVerificationTag: "XYZabc"
+
+  cover:
+    hidden: true # hide everywhere but not in structured data
+    hiddenInList: true # hide on list pages and home
+    hiddenInSingle: true # hide on single page
+
+#  editPost:
+#    URL: "https://github.com/<path_to_repo>/content"
+#    Text: "Suggest Changes" # edit text
+#    appendFilePath: true # to append file path to Edit link
+
+  # for search
+  # https://fusejs.io/api/options.html
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    keys: ["title", "permalink", "summary", "content"]
+menu:
+  main:
+    - identifier: categories
+      name: categories
+      url: /categories/
+      weight: 10
+    - identifier: tags
+      name: tags
+      url: /tags/
+      weight: 20
+    - identifier: example
+      name: example.org
+      url: https://example.org
+      weight: 30
+# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
+pygmentsUseClasses: true
+markup:
+  highlight:
+    noClasses: false
+    # anchorLineNos: true
+    # codeFences: true
+    # guessSyntax: true
+    # lineNos: true
+    # style: monokai
