refactor: update date format, code highlighting settings and add tags to the react post

--- a/config.toml
+++ b/config.toml
@@ -36,8 +36,8 @@ weight = 3
     ordered = false
     startLevel = 1
   [markup.highlight]
-    codeFences = true
-    guessSyntax = false
+    codeFences = false
+    guessSyntax = true
     hl_Lines = ""
     lineNoStart = 1
     lineNos = true
