--- a/config.toml
+++ b/config.toml
@@ -25,10 +25,10 @@ name = "Tags"
 url = "/tags"
 weight = 3
 
-#[[menu.main]]
-#name = "About"
-#url = "/about"
-#weight = 4
+[[menu.main]]
+name = "Categories"
+url = "/categories"
+weight = 4
 
 [markup]
   [markup.tableOfContents]
